--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
   <div class="info">
-    <h4>Fecha: Lunes 17 de Julio</h4>
+    <h4>Fecha: Sabado 15 de Julio</h4>
     <p class="parrafo"> horario: 21:30 hs a 5:00 hs <br> Salon: Acropolis <br> Ubicación: Paso de la Patria 1002 <br> (esquina Donato Alvarez) </p> 
     <div class="boton">
       <button class="click" id="btn">Ver ubicación</button>
@@ -103,7 +103,7 @@
   </a>
     
     <br>
-    <p class="parrafo"> Tenes tiempo hasta el <br> 15-07-2023</p><br>
+    <p class="parrafo"> Tenes tiempo hasta el <br> 1-07-2023</p><br>
   </div>
 
 
