--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <div class="box__copyright">
     <hr>
-    <p>Sitio dedarrollado por <b> <a
+    <p>Sitio desarrollado por <b> <a
           href=" https://www.instagram.com/invites/contact/?i=u1xzn8scfuha&utm_content=qbd7xox">
           digit_invitaciones7</a></b></p>
   </div>
